--- a/2015/haskell.cabal
+++ b/2015/haskell.cabal
@@ -12,8 +12,8 @@ common warnings
     ghc-options: -Wall
 
 library
-    exposed-modules:  Split, String
-    build-depends:    base ^>=4.16.4.0
+    exposed-modules:  Split, String, Md5
+    build-depends:    base ^>=4.16.4.0, process
     hs-source-dirs:   lib
     default-language: Haskell2010
 
