--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .env
-
+**/input
+**/input.txt
 # Created by https://www.toptal.com/developers/gitignore/api/haskell
 # Edit at https://www.toptal.com/developers/gitignore?templates=haskell
 
